# heap-dump-browser

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  index.html  package-lock.json  package.json
assets/: style.scss
src/: heap_dump.rs  load_file.rs  main.rs  view_heap_dump.rs
