[package]
name = "heap-dump-browser"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3"
yew-more-hooks = { version = "0.3.3", features = ["yew-hooks"] }
yew-router = "0.18.0"
patternfly-yew = { version = "0.6.1", features = ["tree", "icons-fab"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
hprof-rs = { git = "https://github.com/SirYwell/hprof-rs" }
web-sys = "0.3.70"
log = "0.4.22"
chrono = "0.4.38"